--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Qualquer coisa</h1>
+    <main class="content">
+        {% block content %}{% endblock content %}
+    </main>
 </body>
 </html>
