Inclução da agenda

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <h1 class="header-heading">
+            <a class="header-link">
+                Agenda
+            </a>
+        </h1>
+    </header>
     <main class="content">
         {% block content %}{% endblock content %}
     </main>
