Integração da url

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <h1 class="header-heading">
-            <a class="header-link">
+            <a href="{% url 'contact:index' %}" class="header-link">
                 Agenda
             </a>
         </h1>
