--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,20 +1,11 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
-    <title>Document</title>
+    {% include 'global/partials/head.html' %}
 </head>
 <body>
-    <header class="header">
-        <h1 class="header-heading">
-            <a href="{% url 'contact:index' %}" class="header-link">
-                Agenda
-            </a>
-        </h1>
-    </header>
+    {% include 'global/partials/header.html' %}
     <main class="content">
         {% block content %}{% endblock content %}
     </main>
