--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     {% include 'global/partials/header.html' %}
+    {% include 'global/partials/message.html' %}
+
+    
+
     <main class="content">
         {% block content %}{% endblock content %}
         {% include 'global/partials/pagination.html' %}
